[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/scripts/tetromino.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/block_invalid.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/block_confirm.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/menu_tick.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/block_trapped.wav" type="AudioStream" id=7]

[node name="Tetromino" type="Node2D"]
script = ExtResource( 2 )

[node name="Reticle" type="Node2D" parent="."]

[node name="Solid" type="Node2D" parent="."]
visible = false

[node name="SoundInvalid" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="SoundConfirm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="SoundSnap" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="SoundTrap" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "SFX"
